2018-05-29  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* src/main-window.c (bw_enable_message_menus): Disable "reply to
	group" when the message is not from an RFC-2369-compliant mail list.
	<URL:https://tools.ietf.org/html/rfc2369>

2018-05-10  Peter Bloomfield  <pbloomfield@bellsouth.net>

	New files for migrating to GResource

	* ui/balsa-ab.gresource.xml:
	* ui/balsa.gresource.xml:

2018-05-01  Albrecht Dreß <albrecht.dress@arcor.de>

	Display time stamps of date-only RFC 5545 iCalendar events

I noticed that “VALUE=DATE” time stamps (date only, without time) in RFC 5545 iCalendar parts (MIME type text/calendar) are not displayed.

The attached trivial patch add parsing, displaying and printing such values  As to simplify life, the date-only values are printed using the “%x” conversion specification, instead of extracting the date part from balsa_app.date_string.

	* libbalsa/rfc2445.c (libbalsa_vcal_new_from_body),
	(date_time_2445_to_time_t):
	* libbalsa/rfc2445.h:
	* src/balsa-mime-widget-vcalendar.c (balsa_vevent_widget):
	* src/balsa-print-object-text.c (balsa_print_object_text_calendar):

2018-04-11  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Fix the "scroll on click" issue
	(https://bugzilla.gnome.org/show_bug.cgi?id=795085)

	* src/balsa-message.c (balsa_message_init): wrap the
	BalsaMimeWidget::widget in a GtkViewport; if we do not,
	GtkContainer does it for us, but also sets it up to scroll when
	first clicked, which leaves the wrong text under the pointer.

2018-03-19  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* libbalsa/imap/imap-commands.c (imap_mbox_handle_fetch_body):
	silence a gcc gripe about snprintf.

2018-03-19  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* libbalsa/imap/imap-commands.c (imap_mbox_handle_fetch_body):
	silence a gcc gripe about strncpy.

2018-02-27  Pawel Salek <pawsa0@gmail.com>

	* src/main-window.c: update a date.
	* meson.build, configure.ac: update version strings.
	* NEWS: balsa-2.5.5 release notes
