@@ -1,5 +1,12 @@
 2018-05-29  Peter Bloomfield  <pbloomfield@bellsouth.net>
 
+	* src/sendmsg-window.c (sendmsg_window_reply): If the message is
+	a reply to a mailing list, check that the message we are
+	replying to actually came from a mailing list; if not, return
+	NULL.
+
+2018-05-29  Peter Bloomfield  <pbloomfield@bellsouth.net>
+
 	* src/main-window.c (bw_enable_message_menus): Disable "reply to
 	group" when the message is not from an RFC-2369-compliant mail list.
 	<URL:https://tools.ietf.org/html/rfc2369>
